# AliceMultiverse

./: .czrc  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .yamllint  <MagicMock name='mock.storage.search_db' id='13308254864'>  CHANGELOG.md  CHANGELOG_v2.1.0.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DUCKDB_CONSOLIDATION_REPORT.md  FEATURE_COMPLETION_STATUS.md  FINAL_QUALITY_REPORT.md  FINAL_STATUS.md  FULL_CLEANUP_REPORT.md  LICENSE  MAINTAINABILITY_IMPROVEMENTS.md  MANIFEST.in  Makefile  NEXT_STEPS.md  PERFORMANCE_ANALYSIS.md  PROJECT_HEALTH_REPORT.md  PROJECT_INVENTORY.md  PROJECT_STATUS_JAN_2025.md  PROVIDER_REFACTORING_EXAMPLE.md  PULL_REQUEST_TEMPLATE.md  QUALITY_IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  README_DATABASE.md  README_OLD.md  README_UPDATES.md  REDIS_REMOVAL_PLAN.md  RESTORATION_SUMMARY.md  ROADMAP.md  (+30 more)
.github/: BRANCH_PROTECTION.md
.github/workflows/: code-quality.yml  pr-required.yml  release.yml  security.yml  tests.yml
alembic/: env.py
alembic/versions/: 719e1c2e97ef_add_postgresql_events_table.py  9720300ecc33_add_project_budget_tracking.py  ab0645bf664b_add_search_performance_indexes.py  cbb2da6f61b1_initial_asset_system_schema.py  postgres_migration.py
alicemultiverse/: __init__.py  __main__.py  cli.py  cli_entry.py  mcp_server.py
alicemultiverse/analytics/: __init__.py  export_analytics.py  improvement_engine.py  performance_tracker.py
alicemultiverse/assets/: __init__.py  discovery.py  hashing.py  perceptual_hashing.py  video_hashing.py
alicemultiverse/cli/: __init__.py  commands.py  config_command.py  main.py  memory_command.py  performance_command.py
alicemultiverse/comparison/: README.md  __init__.py  cli.py  elo_system.py  models.py  populate.py  web_server.py
alicemultiverse/composition/: __init__.py  composition_analyzer.py  flow_analyzer.py  timeline_optimizer.py
alicemultiverse/core/: __init__.py  ai_errors.py  cache_migration.py  config.py  config_adapter.py  config_dataclass.py  config_loader.py  config_validation.py  constants.py  cost_tracker.py  defaults.yaml  error_handling.py  error_recovery.py  exceptions.py  exceptions_extended.py  file_operations.py  first_run.py  graceful_degradation.py  logging.py  logging_middleware.py  memory_optimization.py  metadata_cache.py  metrics.py  metrics_server.py  monitoring.py  performance_config.py  protocols.py  startup_validation.py  structured_logging.py  types.py  unified_cache.py  utils.py  validation.py  welcome.py
alicemultiverse/database/: __init__.py  cache.py  config.py  diagnostics.py  file_cache.py  models.py  optimizations.py  pool_manager.py  repository.py
alicemultiverse/deduplication/: __init__.py  cli.py  duplicate_finder.py  perceptual_hasher.py  similarity_index.py
alicemultiverse/events/: __init__.py  (+18 more)
asyncapi/: README.md  asyncapi.yaml
charts/: README.md
data/: locations.duckdb
docs/: DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_GUIDE.md  INTERFACE_GUIDE.md  JANUARY_2025_RELEASE_NOTES.md  MCP_TOOLS_REFERENCE.md  MEMORY_OPTIMIZATION_GUIDE.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE_JAN_2025.md  PERFORMANCE_GUIDE.md  QUICK_REFERENCE_2025.md  README.md  TROUBLESHOOTING.md  index.md  outdated-references-report.md
examples/: README.md  cloud_storage_config.yaml  config_validation_demo.py  demo_restored_features.py  error_recovery_demo.py  full_workflow_demo.py  integration_testing_demo.py  memory_optimization_demo.py  multi_path_storage_demo.py  performance_monitoring_demo.py  prompt_management_comprehensive.py  prompt_tracking_example.py  quick_start.py  quickstart.py  sample_generation_context.yaml  selection_example.py  semantic_search_demo.py  setup_providers.py  similarity_search_demo.py  similarity_search_with_selections.py  structured_interface_demo.py  test_organization.py  video_workflow_example.md
k8s/: README.md  setup-all.sh  validate.sh
output/: README.md
scripts/: README.md  add_mixin_protocols.py  add_return_types.py  add_type_hints.py  alice.py  analyze_unreachable_code.py  api_key_manager.py  cleanup_empty_metadata.py  cleanup_maintenance.py  cleanup_old_files.sh  cleanup_unnecessary_files.py  docker-entrypoint.sh  event_monitor.py  final_cleanup_embedder.py  final_embedder_fix.py  final_fix_embedder.py  final_syntax_fix.py  find_all_syntax_errors.py  find_indentation_issues.py  fix_advanced_tagger_complete.py  fix_advanced_tagger_indentation.py  fix_advanced_tagger_indentation_proper.py  fix_all_embedder_indent.py  fix_all_indentation.py  fix_all_indentation_issues.py  fix_all_method_bodies.py  fix_all_method_indentation.py  fix_all_try_except.py  fix_all_try_except_blocks.py  fix_all_unreachable.py  fix_any_types.py  fix_bounded_cache.py  fix_cli_handlers_indent.py  fix_cli_parser.py  fix_cli_parser_indent.py  fix_common_mypy_errors.py  fix_embedder.py  fix_embedder_all_indent.py  fix_embedder_carefully.py  fix_embedder_complete.py  (+57 more)
services/: README.md
services/alice-interface/: .claude-context.md  Dockerfile  pyproject.toml
services/asset-processor/: .claude-context.md  Dockerfile  k8s-values.yaml  pyproject.toml  requirements.txt  run.py  start_service.py
services/asset-processor/src/asset_processor/: __init__.py  analyzer.py  main.py  models.py  organizer.py  quality.py  simple_main.py
services/asset-processor/src/asset_processor 2/: main.py  models.py  quality.py  simple_main.py
services/asset-processor/tests/: test_service.py
services/quality-analyzer/: .claude-context.md  Dockerfile  pyproject.toml
tests/: README.md  __init__.py  conftest.py  test_advanced_understanding.py  test_asset_processor.py  test_brisque_claude.py  test_claude_real.py  test_config.py  test_config_basic.py  test_fal_provider_comprehensive.py  test_fal_provider_direct.py  test_fal_provider_simple.py  test_helpers.py  test_mcp_fal_integration.py  test_metadata_cache.py  test_metadata_cache_integration.py  test_metadata_embedding.py  test_metadata_system.py  test_monorepo.py  test_omegaconf.py  test_unified_cache.py  test_webp_heic_metadata.py
(+707 files in other folders)
