[project]
name = "asset-processor"
version = "0.1.0"
description = "Media processing and organization service (DEPRECATED - for reference only)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["asset_processor"]
package-dir = {"" = "src"}